typed reactor