@@ -17,10 +17,7 @@
 package io.army.criteria.impl;
 
 
-import io.army.criteria.CriteriaException;
-import io.army.criteria.Expression;
-import io.army.criteria.IPredicate;
-import io.army.criteria.SimpleExpression;
+import io.army.criteria.*;
 import io.army.mapping.*;
 
 import java.util.List;
@@ -52,7 +49,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-mysql-specific-functions.html#function_geometrycollection">GeometryCollection(g [, g] ...)</a>
      */
     public static SimpleExpression geometryCollection(final List<Expression> geometryList) {
-        return FunctionUtils.multiArgFunc("GeometryCollection", geometryList, VarBinaryType.INSTANCE);
+        return LiteralFunctions.multiArgFunc("GeometryCollection", geometryList);
     }
 
     /**
@@ -67,7 +64,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-mysql-specific-functions.html#function_geometrycollection">GeometryCollection(g [, g] ...)</a>
      */
     public static SimpleExpression geometryCollection(final Expression first, Expression... rest) {
-        return FunctionUtils.oneAndRestFunc("GeometryCollection", VarBinaryType.INSTANCE, first, rest);
+        return FunctionUtils.oneAndRestFunc("GeometryCollection", first, rest);
     }
 
 
@@ -82,7 +79,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-mysql-specific-functions.html#function_linestring">LineString(pt [, pt] ...)</a>
      */
     public static SimpleExpression lineString(final List<Expression> ptList) {
-        return FunctionUtils.multiArgFunc("LineString", ptList, VarBinaryType.INSTANCE);
+        return LiteralFunctions.multiArgFunc("LineString", ptList);
     }
 
     /**
@@ -97,7 +94,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-mysql-specific-functions.html#function_linestring">LineString(pt [, pt] ...)</a>
      */
     public static SimpleExpression lineString(final Expression first, Expression... rest) {
-        return FunctionUtils.oneAndRestFunc("LineString", VarBinaryType.INSTANCE, first, rest);
+        return FunctionUtils.oneAndRestFunc("LineString", first, rest);
     }
 
 
@@ -112,7 +109,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-mysql-specific-functions.html#function_multilinestring">MultiLineString(ls [, ls] ...)</a>
      */
     public static SimpleExpression multiLineString(final List<Expression> ptList) {
-        return FunctionUtils.multiArgFunc("MultiLineString", ptList, VarBinaryType.INSTANCE);
+        return LiteralFunctions.multiArgFunc("MultiLineString", ptList);
     }
 
     /**
@@ -127,7 +124,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-mysql-specific-functions.html#function_multilinestring">MultiLineString(ls [, ls] ...)</a>
      */
     public static SimpleExpression multiLineString(final Expression first, Expression... rest) {
-        return FunctionUtils.oneAndRestFunc("MultiLineString", VarBinaryType.INSTANCE, first, rest);
+        return FunctionUtils.oneAndRestFunc("MultiLineString", first, rest);
     }
 
     /**
@@ -141,7 +138,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-mysql-specific-functions.html#function_multipoint">MultiPoint(pt [, pt2] ...)</a>
      */
     public static SimpleExpression multiPoint(final List<Expression> ptList) {
-        return FunctionUtils.multiArgFunc("MultiPoint", ptList, VarBinaryType.INSTANCE);
+        return LiteralFunctions.multiArgFunc("MultiPoint", ptList);
     }
 
     /**
@@ -156,7 +153,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-mysql-specific-functions.html#function_multipoint">MultiPoint(pt [, pt2] ...)</a>
      */
     public static SimpleExpression multiPoint(final Expression first, Expression... rest) {
-        return FunctionUtils.oneAndRestFunc("MultiPoint", VarBinaryType.INSTANCE, first, rest);
+        return FunctionUtils.oneAndRestFunc("MultiPoint", first, rest);
     }
 
 
@@ -171,7 +168,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-mysql-specific-functions.html#function_multipolygon">MultiPolygon(poly [, poly] ...)</a>
      */
     public static SimpleExpression multiPolygon(final List<Expression> ptList) {
-        return FunctionUtils.multiArgFunc("MultiPolygon", ptList, VarBinaryType.INSTANCE);
+        return LiteralFunctions.multiArgFunc("MultiPolygon", ptList);
     }
 
     /**
@@ -186,7 +183,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-mysql-specific-functions.html#function_multipolygon">MultiPolygon(poly [, poly] ...)</a>
      */
     public static SimpleExpression multiPolygon(final Expression first, Expression... rest) {
-        return FunctionUtils.oneAndRestFunc("MultiPolygon", VarBinaryType.INSTANCE, first, rest);
+        return FunctionUtils.oneAndRestFunc("MultiPolygon", first, rest);
     }
 
 
@@ -201,7 +198,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-mysql-specific-functions.html#function_polygon">Polygon(ls [, ls] ...)</a>
      */
     public static SimpleExpression polygon(final List<Expression> lsList) {
-        return FunctionUtils.multiArgFunc("Polygon", lsList, VarBinaryType.INSTANCE);
+        return LiteralFunctions.multiArgFunc("Polygon", lsList);
     }
 
     /**
@@ -216,7 +213,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-mysql-specific-functions.html#function_polygon">Polygon(ls [, ls] ...)</a>
      */
     public static SimpleExpression polygon(final Expression first, Expression... rest) {
-        return FunctionUtils.oneAndRestFunc("Polygon", VarBinaryType.INSTANCE, first, rest);
+        return FunctionUtils.oneAndRestFunc("Polygon", first, rest);
     }
 
 
@@ -232,7 +229,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-mysql-specific-functions.html#function_point">Point(x, y)</a>
      */
     public static SimpleExpression point(final Expression x, final Expression y) {
-        return FunctionUtils.twoArgFunc("Point", x, y, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("Point", x, y);
     }
 
     /**
@@ -245,8 +242,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @throws CriteriaException throw when invoking this method in non-statement context.
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-mbr.html#function_mbrcontains">MBRContains(g1, g2)</a>
      */
-    public static IPredicate mbrContains(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgPredicateFunc("MBRContains", g1, g2);
+    public static SimplePredicate mbrContains(final Expression g1, final Expression g2) {
+        return LiteralFunctions.twoArgPredicate("MBRContains", g1, g2);
     }
 
     /**
@@ -259,8 +256,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @throws CriteriaException throw when invoking this method in non-statement context.
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-mbr.html#function_mbrcoveredby">MBRCoveredBy(g1, g2)</a>
      */
-    public static IPredicate mbrCoveredBy(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgPredicateFunc("MBRCoveredBy", g1, g2);
+    public static SimplePredicate mbrCoveredBy(final Expression g1, final Expression g2) {
+        return LiteralFunctions.twoArgPredicate("MBRCoveredBy", g1, g2);
     }
 
     /**
@@ -273,8 +270,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @throws CriteriaException throw when invoking this method in non-statement context.
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-mbr.html#function_mbrcovers">MBRCovers(g1, g2)</a>
      */
-    public static IPredicate mbrCovers(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgPredicateFunc("MBRCovers", g1, g2);
+    public static SimplePredicate mbrCovers(final Expression g1, final Expression g2) {
+        return LiteralFunctions.twoArgPredicate("MBRCovers", g1, g2);
     }
 
     /**
@@ -287,8 +284,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @throws CriteriaException throw when invoking this method in non-statement context.
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-mbr.html#function_mbrdisjoint">MBRDisjoint(g1, g2)</a>
      */
-    public static IPredicate mbrDisjoint(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgPredicateFunc("MBRDisjoint", g1, g2);
+    public static SimplePredicate mbrDisjoint(final Expression g1, final Expression g2) {
+        return LiteralFunctions.twoArgPredicate("MBRDisjoint", g1, g2);
     }
 
     /**
@@ -301,8 +298,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @throws CriteriaException throw when invoking this method in non-statement context.
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-mbr.html#function_mbrequals">MBREquals(g1, g2)</a>
      */
-    public static IPredicate mbrEquals(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgPredicateFunc("MBREquals", g1, g2);
+    public static SimplePredicate mbrEquals(final Expression g1, final Expression g2) {
+        return LiteralFunctions.twoArgPredicate("MBREquals", g1, g2);
     }
 
     /**
@@ -315,8 +312,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @throws CriteriaException throw when invoking this method in non-statement context.
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-mbr.html#function_mbrintersects">MBRIntersects(g1, g2)</a>
      */
-    public static IPredicate mbrIntersects(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgPredicateFunc("MBRIntersects", g1, g2);
+    public static SimplePredicate mbrIntersects(final Expression g1, final Expression g2) {
+        return LiteralFunctions.twoArgPredicate("MBRIntersects", g1, g2);
     }
 
 
@@ -330,8 +327,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @throws CriteriaException throw when invoking this method in non-statement context.
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-mbr.html#function_mbroverlaps">MBROverlaps(g1, g2)</a>
      */
-    public static IPredicate mbrOverlaps(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgPredicateFunc("MBROverlaps", g1, g2);
+    public static SimplePredicate mbrOverlaps(final Expression g1, final Expression g2) {
+        return LiteralFunctions.twoArgPredicate("MBROverlaps", g1, g2);
     }
 
     /**
@@ -344,8 +341,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @throws CriteriaException throw when invoking this method in non-statement context.
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-mbr.html#function_mbrtouches">MBRTouches(g1, g2)</a>
      */
-    public static IPredicate mbrTouches(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgPredicateFunc("MBRTouches", g1, g2);
+    public static SimplePredicate mbrTouches(final Expression g1, final Expression g2) {
+        return LiteralFunctions.twoArgPredicate("MBRTouches", g1, g2);
     }
 
     /**
@@ -358,8 +355,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @throws CriteriaException throw when invoking this method in non-statement context.
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-mbr.html#function_mbrwithin">MBRWithin(g1, g2)</a>
      */
-    public static IPredicate mbrWithin(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgPredicateFunc("MBRWithin", g1, g2);
+    public static SimplePredicate mbrWithin(final Expression g1, final Expression g2) {
+        return LiteralFunctions.twoArgPredicate("MBRWithin", g1, g2);
     }
 
     /**
@@ -372,7 +369,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-polygon-property-functions.html#function_st-area">ST_Area({poly|mpoly})</a>
      */
     public static SimpleExpression stArea(final Expression polyOrmpoly) {
-        return FunctionUtils.oneArgFunc("ST_Area", polyOrmpoly, DoubleType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_Area", polyOrmpoly);
     }
 
     /**
@@ -386,7 +383,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-polygon-property-functions.html#function_st-centroid">ST_Centroid({poly|mpoly})</a>
      */
     public static SimpleExpression stCentroid(final Expression polyOrmpoly) {
-        return FunctionUtils.oneArgFunc("ST_Centroid", polyOrmpoly, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_Centroid", polyOrmpoly);
     }
 
     /**
@@ -400,7 +397,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-polygon-property-functions.html#function_st-exteriorring">ST_ExteriorRing(poly)</a>
      */
     public static SimpleExpression stExteriorRing(final Expression poly) {
-        return FunctionUtils.oneArgFunc("ST_ExteriorRing", poly, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_ExteriorRing", poly);
     }
 
     /**
@@ -415,7 +412,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-polygon-property-functions.html#function_st-interiorringn">ST_InteriorRingN(poly, N)</a>
      */
     public static SimpleExpression stInteriorRingN(final Expression poly, final Expression n) {
-        return FunctionUtils.twoArgFunc("ST_InteriorRingN", poly, n, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_InteriorRingN", poly, n);
     }
 
 
@@ -429,7 +426,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-polygon-property-functions.html#function_st-numinteriorrings">ST_NumInteriorRing(poly)</a>
      */
     public static SimpleExpression stNumInteriorRing(final Expression poly) {
-        return FunctionUtils.oneArgFunc("ST_NumInteriorRing", poly, IntegerType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_NumInteriorRing", poly);
     }
 
     /**
@@ -442,7 +439,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-polygon-property-functions.html#function_st-numinteriorrings">ST_NumInteriorRings(poly)</a>
      */
     public static SimpleExpression stNumInteriorRings(final Expression poly) {
-        return FunctionUtils.oneArgFunc("ST_NumInteriorRings", poly, IntegerType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_NumInteriorRings", poly);
     }
 
 
@@ -457,7 +454,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-format-conversion-functions.html#function_st-asbinary">ST_AsBinary(g [, options])</a>
      */
     public static SimpleExpression stAsBinary(final Expression g) {
-        return FunctionUtils.oneArgFunc("ST_AsBinary", g, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_AsBinary", g);
     }
 
     /**
@@ -472,7 +469,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-format-conversion-functions.html#function_st-asbinary">ST_AsBinary(g [, options])</a>
      */
     public static SimpleExpression stAsBinary(final Expression g, final Expression options) {
-        return _simpleTowArgFunc("ST_AsBinary", g, options, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_AsBinary", g, options);
     }
 
     /**
@@ -486,7 +483,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-format-conversion-functions.html#function_st-asbinary">ST_AsWKB(g [, options])</a>
      */
     public static SimpleExpression stAsWKB(final Expression g) {
-        return FunctionUtils.oneArgFunc("ST_AsWKB", g, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_AsWKB", g);
     }
 
     /**
@@ -501,7 +498,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-format-conversion-functions.html#function_st-asbinary">ST_AsWKB(g [, options])</a>
      */
     public static SimpleExpression stAsWKB(final Expression g, final Expression options) {
-        return FunctionUtils.twoArgFunc("ST_AsWKB", g, options, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_AsWKB", g, options);
     }
 
 
@@ -515,7 +512,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-format-conversion-functions.html#function_st-astext">ST_AsText(g [, options])</a>
      */
     public static SimpleExpression stAsText(final Expression g) {
-        return FunctionUtils.oneArgFunc("ST_AsText", g, StringType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_AsText", g);
     }
 
     /**
@@ -529,7 +526,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-format-conversion-functions.html#function_st-astext">ST_AsText(g [, options])</a>
      */
     public static SimpleExpression stAsText(final Expression g, final Expression options) {
-        return FunctionUtils.twoArgFunc("ST_AsText", g, options, StringType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_AsText", g, options);
     }
 
     /**
@@ -542,7 +539,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-format-conversion-functions.html#function_st-astext">ST_AsWKT(g [, options])</a>
      */
     public static SimpleExpression stAsWKT(final Expression g) {
-        return FunctionUtils.oneArgFunc("ST_AsWKT", g, StringType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_AsWKT", g);
     }
 
     /**
@@ -556,7 +553,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-format-conversion-functions.html#function_st-astext">ST_AsWKT(g [, options])</a>
      */
     public static SimpleExpression stAsWKT(final Expression g, final Expression options) {
-        return FunctionUtils.twoArgFunc("ST_AsWKT", g, options, StringType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_AsWKT", g, options);
     }
 
     /**
@@ -570,7 +567,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-format-conversion-functions.html#function_st-swapxy">ST_SwapXY(g)</a>
      */
     public static SimpleExpression stSwapXY(final Expression g) {
-        return FunctionUtils.oneArgFunc("ST_SwapXY", g, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_SwapXY", g);
     }
 
 
@@ -584,7 +581,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-geojson-functions.html#function_st-asgeojson">ST_AsGeoJSON(g [, max_dec_digits [, options]])</a>
      */
     public static SimpleExpression stAsGeoJson(Expression g) {
-        return FunctionUtils.oneArgFunc("ST_AsGeoJSON", g, StringType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_AsGeoJSON", g);
     }
 
     /**
@@ -598,7 +595,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-geojson-functions.html#function_st-asgeojson">ST_AsGeoJSON(g [, max_dec_digits [, options]])</a>
      */
     public static SimpleExpression stAsGeoJson(Expression g, Expression maxDecDigits) {
-        return FunctionUtils.twoArgFunc("ST_AsGeoJSON", g, maxDecDigits, StringType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_AsGeoJSON", g, maxDecDigits);
     }
 
     /**
@@ -612,7 +609,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-geojson-functions.html#function_st-asgeojson">ST_AsGeoJSON(g [, max_dec_digits [, options]])</a>
      */
     public static SimpleExpression stAsGeoJson(Expression g, Expression maxDecDigits, Expression options) {
-        return FunctionUtils.threeArgFunc("ST_AsGeoJSON", g, maxDecDigits, options, StringType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_AsGeoJSON", g, maxDecDigits, options);
     }
 
 
@@ -626,7 +623,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-geojson-functions.html#function_st-geomfromgeojson">ST_GeomFromGeoJSON(str [, options [, srid]])</a>
      */
     public static SimpleExpression stGeomFromGeoJson(Expression str) {
-        return FunctionUtils.oneArgFunc("ST_GeomFromGeoJSON", str, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_GeomFromGeoJSON", str);
     }
 
     /**
@@ -640,7 +637,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-geojson-functions.html#function_st-geomfromgeojson">ST_GeomFromGeoJSON(str [, options [, srid]])</a>
      */
     public static SimpleExpression stGeomFromGeoJson(Expression str, Expression options) {
-        return FunctionUtils.twoArgFunc("ST_GeomFromGeoJSON", str, options, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_GeomFromGeoJSON", str, options);
     }
 
     /**
@@ -654,7 +651,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-geojson-functions.html#function_st-geomfromgeojson">ST_GeomFromGeoJSON(str [, options [, srid]])</a>
      */
     public static SimpleExpression stGeomFromGeoJson(Expression str, Expression options, Expression srid) {
-        return FunctionUtils.threeArgFunc("ST_GeomFromGeoJSON", str, options, srid, VarBinaryType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_GeomFromGeoJSON", str, options, srid);
     }
 
 
@@ -670,7 +667,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-operator-functions.html#function_st-buffer">ST_Buffer(g, d [, strategy1 [, strategy2 [, strategy3]]])</a>
      */
     public static SimpleExpression stBuffer(Expression g, Expression d) {
-        return FunctionUtils.twoArgFunc("ST_Buffer", g, d, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_Buffer", g, d);
     }
 
     /**
@@ -685,7 +682,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-operator-functions.html#function_st-buffer">ST_Buffer(g, d [, strategy1 [, strategy2 [, strategy3]]])</a>
      */
     public static SimpleExpression stBuffer(Expression g, Expression d, Expression strategy1) {
-        return FunctionUtils.threeArgFunc("ST_Buffer", g, d, strategy1, VarBinaryType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_Buffer", g, d, strategy1);
     }
 
     /**
@@ -700,7 +697,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-operator-functions.html#function_st-buffer">ST_Buffer(g, d [, strategy1 [, strategy2 [, strategy3]]])</a>
      */
     public static SimpleExpression stBuffer(Expression g, Expression d, Expression strategy1, Expression strategy2) {
-        return FunctionUtils.multiArgFunc("ST_Buffer", VarBinaryType.INSTANCE, g, d, strategy1, strategy2);
+        return LiteralFunctions.multiArgFunc("ST_Buffer", List.of(g, d, strategy1, strategy2));
     }
 
     /**
@@ -717,8 +714,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
     public static SimpleExpression stBuffer(Expression g, Expression d
             , Expression strategy1, Expression strategy2
             , Expression strategy3) {
-        return FunctionUtils.multiArgFunc("ST_Buffer", VarBinaryType.INSTANCE
-                , g, d, strategy1, strategy2, strategy3);
+        return LiteralFunctions.multiArgFunc("ST_Buffer", List.of(g, d, strategy1, strategy2, strategy3));
     }
 
     /**
@@ -732,19 +728,11 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      */
     public static SimpleExpression stBufferStrategy(final List<Expression> expList) {
         final String name = "ST_Buffer_Strategy";
-        final SimpleExpression func;
-        switch (expList.size()) {
-            case 1:
-                func = FunctionUtils.oneArgFunc(name, expList.get(0), VarBinaryType.INSTANCE);
-                break;
-            case 2:
-                func = FunctionUtils.complexArgFunc(name, _createSimpleMultiArgList(expList)
-                        , VarBinaryType.INSTANCE);
-                break;
-            default:
-                throw CriteriaUtils.funcArgError(name, expList);
-        }
-        return func;
+        return switch (expList.size()) {
+            case 1 -> LiteralFunctions.oneArgFunc(name, expList.getFirst());
+            case 2 -> LiteralFunctions.twoArgFunc(name, expList.getFirst(), expList.get(1));
+            default -> throw CriteriaUtils.funcArgError(name, expList);
+        };
     }
 
     /**
@@ -757,7 +745,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-operator-functions.html#function_st-buffer-strategy">ST_Buffer_Strategy(strategy [, points_per_circle])</a>
      */
     public static SimpleExpression stBufferStrategy(Expression strategy) {
-        return FunctionUtils.oneArgFunc("ST_Buffer_Strategy", strategy, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_Buffer_Strategy", strategy);
     }
 
     /**
@@ -770,7 +758,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-operator-functions.html#function_st-buffer-strategy">ST_Buffer_Strategy(strategy [, points_per_circle])</a>
      */
     public static SimpleExpression stBufferStrategy(Expression strategy, Expression pointsPerCircle) {
-        return FunctionUtils.twoArgFunc("ST_Buffer_Strategy", strategy, pointsPerCircle, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_Buffer_Strategy", strategy, pointsPerCircle);
     }
 
 
@@ -785,7 +773,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-operator-functions.html#function_st-convexhull">ST_ConvexHull(g)</a>
      */
     public static SimpleExpression stConvexHull(final Expression g) {
-        return FunctionUtils.oneArgFunc("ST_ConvexHull", g, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_ConvexHull", g);
     }
 
     /**
@@ -800,7 +788,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-operator-functions.html#function_st-difference">ST_Difference(g1, g2)</a>
      */
     public static SimpleExpression stDifference(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgFunc("ST_Difference", g1, g2, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_Difference", g1, g2);
     }
 
     /**
@@ -815,7 +803,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-operator-functions.html#function_st-intersection">ST_Intersection(g1, g2)</a>
      */
     public static SimpleExpression stIntersection(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgFunc("ST_Intersection", g1, g2, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_Intersection", g1, g2);
     }
 
     /**
@@ -830,7 +818,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-operator-functions.html#function_st-lineinterpolatepoint">ST_LineInterpolatePoint(ls, fractional_distance)</a>
      */
     public static SimpleExpression stLineInterpolatePoint(final Expression ls, final Expression fractionalDistance) {
-        return FunctionUtils.twoArgFunc("ST_LineInterpolatePoint", ls, fractionalDistance, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_LineInterpolatePoint", ls, fractionalDistance);
     }
 
     /**
@@ -845,7 +833,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-operator-functions.html#function_st-lineinterpolatepoints">ST_LineInterpolatePoints(ls, fractional_distance)</a>
      */
     public static SimpleExpression stLineInterpolatePoints(final Expression ls, final Expression fractionalDistance) {
-        return FunctionUtils.twoArgFunc("ST_LineInterpolatePoints", ls, fractionalDistance, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_LineInterpolatePoints", ls, fractionalDistance);
     }
 
     /**
@@ -860,7 +848,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-operator-functions.html#function_st-pointatdistance">ST_PointAtDistance(ls, distance)</a>
      */
     public static SimpleExpression stPointAtDistance(final Expression ls, final Expression distance) {
-        return FunctionUtils.twoArgFunc("ST_PointAtDistance", ls, distance, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_PointAtDistance", ls, distance);
     }
 
     /**
@@ -875,7 +863,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-operator-functions.html#function_st-symdifference">ST_SymDifference(g1, g2)</a>
      */
     public static SimpleExpression stSymDifference(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgFunc("ST_SymDifference", g1, g2, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_SymDifference", g1, g2);
     }
 
     /**
@@ -890,7 +878,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-operator-functions.html#function_st-transform">ST_Transform(g, target_srid)</a>
      */
     public static SimpleExpression stTransform(final Expression g, final Expression targetSrid) {
-        return FunctionUtils.twoArgFunc("ST_Transform", g, targetSrid, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_Transform", g, targetSrid);
     }
 
     /**
@@ -905,7 +893,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-operator-functions.html#function_st-union">ST_Union(g1, g2)</a>
      */
     public static SimpleExpression stUnion(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgFunc("ST_Union", g1, g2, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_Union", g1, g2);
     }
 
     /*-------------------below Spatial Convenience Functions-------------------*/
@@ -921,17 +909,11 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      */
     public static SimpleExpression stDistanceSphere(final List<Expression> expList) {
         final String name = "ST_Distance_Sphere";
-        final SimpleExpression func;
-        switch (expList.size()) {
-            case 2:
-            case 3:
-                func = FunctionUtils.complexArgFunc(name, _createSimpleMultiArgList(expList)
-                        , DoubleType.INSTANCE);
-                break;
-            default:
-                throw CriteriaUtils.funcArgError(name, expList);
-        }
-        return func;
+        return switch (expList.size()) {
+            case 2 -> LiteralFunctions.twoArgFunc(name, expList.getFirst(), expList.get(1));
+            case 3 -> LiteralFunctions.threeArgFunc(name, expList.getFirst(), expList.get(1), expList.get(2));
+            default -> throw CriteriaUtils.funcArgError(name, expList);
+        };
     }
 
     /**
@@ -945,7 +927,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-convenience-functions.html#function_st-distance-sphere">ST_Distance_Sphere(g1, g2 [, radius])</a>
      */
     public static SimpleExpression stDistanceSphere(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgFunc("ST_Distance_Sphere", g1, g2, DoubleType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_Distance_Sphere", g1, g2);
     }
 
     /**
@@ -959,7 +941,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-convenience-functions.html#function_st-distance-sphere">ST_Distance_Sphere(g1, g2 [, radius])</a>
      */
     public static SimpleExpression stDistanceSphere(final Expression g1, final Expression g2, Expression radius) {
-        return FunctionUtils.threeArgFunc("ST_Distance_Sphere", g1, g2, radius, DoubleType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_Distance_Sphere", g1, g2, radius);
     }
 
     /**
@@ -971,8 +953,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @throws CriteriaException throw when invoking this method in non-statement context.
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-convenience-functions.html#function_st-isvalid">ST_IsValid(g)</a>
      */
-    public static IPredicate stIsValid(final Expression g) {
-        return FunctionUtils.oneArgPredicateFunc("ST_IsValid", g);
+    public static SimplePredicate stIsValid(final Expression g) {
+        return LiteralFunctions.oneArgPredicate("ST_IsValid", g);
     }
 
     /**
@@ -987,7 +969,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-convenience-functions.html#function_st-makeenvelope">ST_MakeEnvelope(pt1, pt2)</a>
      */
     public static SimpleExpression stMakeEnvelope(final Expression pt1, final Expression pt2) {
-        return FunctionUtils.twoArgFunc("ST_MakeEnvelope", pt1, pt2, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_MakeEnvelope", pt1, pt2);
     }
 
     /**
@@ -1002,7 +984,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-convenience-functions.html#function_st-simplify">ST_Simplify(g, max_distance)</a>
      */
     public static SimpleExpression stSimplify(final Expression g, final Expression maxDistance) {
-        return FunctionUtils.twoArgFunc("ST_Simplify", g, maxDistance, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_Simplify", g, maxDistance);
     }
 
 
@@ -1017,7 +999,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-convenience-functions.html#function_st-validate">ST_Validate(g)</a>
      */
     public static SimpleExpression stValidate(final Expression g) {
-        return FunctionUtils.oneArgFunc("ST_Validate", g, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_Validate", g);
     }
 
 
@@ -1034,7 +1016,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-linestring-property-functions.html#function_st-endpoint">ST_EndPoint(ls)</a>
      */
     public static SimpleExpression stEndPoint(final Expression ls) {
-        return FunctionUtils.oneArgFunc("ST_EndPoint", ls, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_EndPoint", ls);
     }
 
 
@@ -1047,8 +1029,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @throws CriteriaException throw when invoking this method in non-statement context.
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-linestring-property-functions.html#function_st-isclosed">ST_IsClosed(ls)</a>
      */
-    public static SimpleExpression stIsClosed(final Expression ls) {
-        return FunctionUtils.oneArgFunc("ST_IsClosed", ls, BooleanType.INSTANCE);
+    public static SimplePredicate stIsClosed(final Expression ls) {
+        return LiteralFunctions.oneArgPredicate("ST_IsClosed", ls);
     }
 
     /**
@@ -1061,7 +1043,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-linestring-property-functions.html#function_st-length">ST_Length(ls [, unit])</a>
      */
     public static SimpleExpression stLength(Expression ls) {
-        return FunctionUtils.oneArgFunc("ST_Length", ls, DoubleType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_Length", ls);
     }
 
     /**
@@ -1075,7 +1057,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-linestring-property-functions.html#function_st-length">ST_Length(ls [, unit])</a>
      */
     public static SimpleExpression stLength(final Expression ls, Expression unit) {
-        return FunctionUtils.twoArgFunc("ST_Length", ls, unit, DoubleType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_Length", ls, unit);
     }
 
     /**
@@ -1088,7 +1070,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-linestring-property-functions.html#function_st-numpoints">ST_NumPoints(ls)</a>
      */
     public static SimpleExpression stNumPoints(final Expression ls) {
-        return FunctionUtils.oneArgFunc("ST_NumPoints", ls, IntegerType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_NumPoints", ls);
     }
 
 
@@ -1104,7 +1086,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-linestring-property-functions.html#function_st-pointn">ST_PointN(ls, N)</a>
      */
     public static SimpleExpression stPointN(final Expression ls, final Expression n) {
-        return FunctionUtils.twoArgFunc("ST_PointN", ls, n, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_PointN", ls, n);
     }
 
 
@@ -1119,7 +1101,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-linestring-property-functions.html#function_st-startpoint">ST_StartPoint(ls)</a>
      */
     public static SimpleExpression stStartPoint(final Expression ls) {
-        return FunctionUtils.oneArgFunc("ST_StartPoint", ls, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_StartPoint", ls);
     }
 
 
@@ -1135,8 +1117,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @throws CriteriaException throw when invoking this method in non-statement context.
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-object-shapes.html#function_st-contains">ST_Contains(g1, g2)</a>
      */
-    public static IPredicate stContains(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgPredicateFunc("ST_Contains", g1, g2);
+    public static SimplePredicate stContains(final Expression g1, final Expression g2) {
+        return LiteralFunctions.twoArgPredicate("ST_Contains", g1, g2);
     }
 
 
@@ -1150,8 +1132,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @throws CriteriaException throw when invoking this method in non-statement context.
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-object-shapes.html#function_st-crosses">ST_Crosses(g1, g2)</a>
      */
-    public static IPredicate stCrosses(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgPredicateFunc("ST_Crosses", g1, g2);
+    public static SimplePredicate stCrosses(final Expression g1, final Expression g2) {
+        return LiteralFunctions.twoArgPredicate("ST_Crosses", g1, g2);
     }
 
     /**
@@ -1164,8 +1146,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @throws CriteriaException throw when invoking this method in non-statement context.
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-object-shapes.html#function_st-disjoint">ST_Disjoint(g1, g2)</a>
      */
-    public static IPredicate stDisjoint(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgPredicateFunc("ST_Disjoint", g1, g2);
+    public static SimplePredicate stDisjoint(final Expression g1, final Expression g2) {
+        return LiteralFunctions.twoArgPredicate("ST_Disjoint", g1, g2);
     }
 
 
@@ -1181,7 +1163,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-object-shapes.html#function_st-distance">ST_Distance(g1, g2 [, unit])</a>
      */
     public static SimpleExpression stDistance(final Expression g1, Expression g2) {
-        return FunctionUtils.twoArgFunc("ST_Distance", g1, g2, DoubleType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_Distance", g1, g2);
     }
 
     /**
@@ -1197,7 +1179,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-object-shapes.html#function_st-distance">ST_Distance(g1, g2 [, unit])</a>
      */
     public static SimpleExpression stDistance(final Expression g1, Expression g2, Expression unit) {
-        return FunctionUtils.threeArgFunc("ST_Distance", g1, g2, unit, DoubleType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_Distance", g1, g2, unit);
     }
 
 
@@ -1211,8 +1193,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @throws CriteriaException throw when invoking this method in non-statement context.
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-object-shapes.html#function_st-equals">ST_Equals(g1, g2)</a>
      */
-    public static IPredicate stEquals(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgPredicateFunc("ST_Equals", g1, g2);
+    public static SimplePredicate stEquals(final Expression g1, final Expression g2) {
+        return LiteralFunctions.twoArgPredicate("ST_Equals", g1, g2);
     }
 
     /**
@@ -1226,7 +1208,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-object-shapes.html#function_st-frechetdistance">ST_FrechetDistance(g1, g2 [, unit])</a>
      */
     public static SimpleExpression stFrechetDistance(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgFunc("ST_FrechetDistance", g1, g2, DoubleType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_FrechetDistance", g1, g2);
     }
 
     /**
@@ -1241,7 +1223,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-object-shapes.html#function_st-frechetdistance">ST_FrechetDistance(g1, g2 [, unit])</a>
      */
     public static SimpleExpression stFrechetDistance(final Expression g1, final Expression g2, final Expression unit) {
-        return FunctionUtils.threeArgFunc("ST_FrechetDistance", g1, g2, unit, DoubleType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_FrechetDistance", g1, g2, unit);
     }
 
     /**
@@ -1255,7 +1237,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-object-shapes.html#function_st-hausdorffdistance">ST_HausdorffDistance(g1, g2 [, unit])</a>
      */
     public static SimpleExpression stHausdorffDistance(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgFunc("ST_HausdorffDistance", g1, g2, DoubleType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_HausdorffDistance", g1, g2);
     }
 
     /**
@@ -1269,7 +1251,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-object-shapes.html#function_st-hausdorffdistance">ST_HausdorffDistance(g1, g2 [, unit])</a>
      */
     public static SimpleExpression stHausdorffDistance(final Expression g1, final Expression g2, final Expression unit) {
-        return FunctionUtils.threeArgFunc("ST_HausdorffDistance", g1, g2, unit, DoubleType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_HausdorffDistance", g1, g2, unit);
     }
 
 
@@ -1282,8 +1264,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @param g2 non-null
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-object-shapes.html#function_st-intersects">ST_Intersects(g1, g2)</a>
      */
-    public static IPredicate stIntersects(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgPredicateFunc("ST_Intersects", g1, g2);
+    public static SimplePredicate stIntersects(final Expression g1, final Expression g2) {
+        return LiteralFunctions.twoArgPredicate("ST_Intersects", g1, g2);
     }
 
 
@@ -1297,8 +1279,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @throws CriteriaException throw when g1 or g2 is multi parameter or literal
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-object-shapes.html#function_st-overlaps">ST_Overlaps(g1, g2)</a>
      */
-    public static IPredicate stOverlaps(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgPredicateFunc("ST_Overlaps", g1, g2);
+    public static SimplePredicate stOverlaps(final Expression g1, final Expression g2) {
+        return LiteralFunctions.twoArgPredicate("ST_Overlaps", g1, g2);
     }
 
     /**
@@ -1311,8 +1293,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @throws CriteriaException throw when g1 or g2 is multi parameter or literal
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-object-shapes.html#function_st-touches">ST_Touches(g1, g2)</a>
      */
-    public static IPredicate stTouches(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgPredicateFunc("ST_Touches", g1, g2);
+    public static SimplePredicate stTouches(final Expression g1, final Expression g2) {
+        return LiteralFunctions.twoArgPredicate("ST_Touches", g1, g2);
     }
 
     /**
@@ -1325,8 +1307,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @throws CriteriaException throw when g1 or g2 is multi parameter or literal
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-relation-functions-object-shapes.html#function_st-within">ST_Within(g1, g2)</a>
      */
-    public static IPredicate stWithin(final Expression g1, final Expression g2) {
-        return FunctionUtils.twoArgPredicateFunc("ST_Within", g1, g2);
+    public static SimplePredicate stWithin(final Expression g1, final Expression g2) {
+        return LiteralFunctions.twoArgPredicate("ST_Within", g1, g2);
     }
 
 
@@ -1344,7 +1326,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-geohash-functions.html#function_st-geohash">ST_GeoHash(longitude, latitude, max_length), ST_GeoHash(point, max_length)</a>
      */
     public static SimpleExpression stGeoHash(final Expression point, final Expression maxLength) {
-        return FunctionUtils.twoArgFunc("ST_GeoHash", point, maxLength, StringType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_GeoHash", point, maxLength);
     }
 
     /**
@@ -1360,7 +1342,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-geohash-functions.html#function_st-geohash">ST_GeoHash(longitude, latitude, max_length), ST_GeoHash(point, max_length)</a>
      */
     public static SimpleExpression stGeoHash(final Expression longitude, final Expression latitude, final Expression maxLength) {
-        return FunctionUtils.threeArgFunc("ST_GeoHash", longitude, latitude, maxLength, StringType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_GeoHash", longitude, latitude, maxLength);
     }
 
 
@@ -1374,7 +1356,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-geohash-functions.html#function_st-latfromgeohash">ST_LatFromGeoHash(geohash_str)</a>
      */
     public static SimpleExpression stLatFromGeoHash(final Expression geohashStr) {
-        return FunctionUtils.oneArgFunc("ST_LatFromGeoHash", geohashStr, DoubleType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_LatFromGeoHash", geohashStr);
     }
 
     /**
@@ -1387,7 +1369,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-geohash-functions.html#function_st-longfromgeohash">ST_LongFromGeoHash(geohash_str)</a>
      */
     public static SimpleExpression stLongFromGeoHash(final Expression geohashStr) {
-        return FunctionUtils.oneArgFunc("ST_LongFromGeoHash", geohashStr, DoubleType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_LongFromGeoHash", geohashStr);
     }
 
 
@@ -1402,7 +1384,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/spatial-geohash-functions.html#function_st-pointfromgeohash">ST_PointFromGeoHash(geohash_str, srid)</a>
      */
     public static SimpleExpression stPointFromGeoHash(final Expression geohashStr, final Expression srid) {
-        return FunctionUtils.twoArgFunc("ST_PointFromGeoHash", geohashStr, srid, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_PointFromGeoHash", geohashStr, srid);
     }
 
     /*-------------------below Functions That Create Geometry Values from WKT Values-------------------*/
@@ -1419,7 +1401,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-geomcollfromtext">ST_GeomCollFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stGeomCollFromText(final Expression wkt) {
-        return FunctionUtils.oneArgFunc("ST_GeomCollFromText", wkt, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_GeomCollFromText", wkt);
     }
 
     /**
@@ -1433,7 +1415,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-geomcollfromtext">ST_GeomCollFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stGeomCollFromText(final Expression wkt, Expression srid) {
-        return FunctionUtils.twoArgFunc("ST_GeomCollFromText", wkt, srid, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_GeomCollFromText", wkt, srid);
     }
 
     /**
@@ -1447,7 +1429,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-geomcollfromtext">ST_GeomCollFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stGeomCollFromText(final Expression wkt, Expression srid, Expression options) {
-        return FunctionUtils.threeArgFunc("ST_GeomCollFromText", wkt, srid, options, VarBinaryType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_GeomCollFromText", wkt, srid, options);
     }
 
 
@@ -1462,7 +1444,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-geomfromtext">ST_GeomFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stGeomFromText(final Expression wkt) {
-        return FunctionUtils.oneArgFunc("ST_GeomFromText", wkt, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_GeomFromText", wkt);
     }
 
     /**
@@ -1476,7 +1458,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-geomfromtext">ST_GeomFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stGeomFromText(final Expression wkt, Expression srid) {
-        return FunctionUtils.twoArgFunc("ST_GeomFromText", wkt, srid, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_GeomFromText", wkt, srid);
     }
 
     /**
@@ -1490,7 +1472,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-geomfromtext">ST_GeomFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stGeomFromText(final Expression wkt, Expression srid, Expression options) {
-        return FunctionUtils.threeArgFunc("ST_GeomFromText", wkt, srid, options, VarBinaryType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_GeomFromText", wkt, srid, options);
     }
 
 
@@ -1505,7 +1487,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-linefromtext">ST_LineStringFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stLineStringFromText(final Expression wkt) {
-        return FunctionUtils.oneArgFunc("ST_LineStringFromText", wkt, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_LineStringFromText", wkt);
     }
 
     /**
@@ -1519,7 +1501,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-linefromtext">ST_LineStringFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stLineStringFromText(final Expression wkt, Expression srid) {
-        return FunctionUtils.twoArgFunc("ST_LineStringFromText", wkt, srid, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_LineStringFromText", wkt, srid);
     }
 
     /**
@@ -1533,7 +1515,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-linefromtext">ST_LineStringFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stLineStringFromText(final Expression wkt, Expression srid, Expression options) {
-        return FunctionUtils.threeArgFunc("ST_LineStringFromText", wkt, srid, options, VarBinaryType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_LineStringFromText", wkt, srid, options);
     }
 
 
@@ -1548,7 +1530,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-mlinefromtext">ST_MultiLineStringFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stMultiLineStringFromText(final Expression wkt) {
-        return FunctionUtils.oneArgFunc("ST_MultiLineStringFromText", wkt, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_MultiLineStringFromText", wkt);
     }
 
     /**
@@ -1562,7 +1544,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-mlinefromtext">ST_MultiLineStringFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stMultiLineStringFromText(final Expression wkt, Expression srid) {
-        return FunctionUtils.twoArgFunc("ST_MultiLineStringFromText", wkt, srid, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_MultiLineStringFromText", wkt, srid);
     }
 
     /**
@@ -1576,7 +1558,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-mlinefromtext">ST_MultiLineStringFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stMultiLineStringFromText(final Expression wkt, Expression srid, Expression options) {
-        return FunctionUtils.threeArgFunc("ST_MultiLineStringFromText", wkt, srid, options, VarBinaryType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_MultiLineStringFromText", wkt, srid, options);
     }
 
 
@@ -1591,7 +1573,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-mpointfromtext">ST_MultiPointFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stMultiPointFromText(final Expression wkt) {
-        return FunctionUtils.oneArgFunc("ST_MultiPointFromText", wkt, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_MultiPointFromText", wkt);
     }
 
     /**
@@ -1605,7 +1587,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-mpointfromtext">ST_MultiPointFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stMultiPointFromText(final Expression wkt, Expression srid) {
-        return FunctionUtils.twoArgFunc("ST_MultiPointFromText", wkt, srid, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_MultiPointFromText", wkt, srid);
     }
 
     /**
@@ -1619,7 +1601,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-mpointfromtext">ST_MultiPointFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stMultiPointFromText(final Expression wkt, Expression srid, Expression options) {
-        return FunctionUtils.threeArgFunc("ST_MultiPointFromText", wkt, srid, options, VarBinaryType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_MultiPointFromText", wkt, srid, options);
     }
 
 
@@ -1634,7 +1616,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-mpolyfromtext">ST_MultiPolygonFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stMultiPolygonFromText(final Expression wkt) {
-        return FunctionUtils.oneArgFunc("ST_MultiPolygonFromText", wkt, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_MultiPolygonFromText", wkt);
     }
 
     /**
@@ -1648,7 +1630,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-mpolyfromtext">ST_MultiPolygonFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stMultiPolygonFromText(final Expression wkt, Expression srid) {
-        return FunctionUtils.twoArgFunc("ST_MultiPolygonFromText", wkt, srid, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_MultiPolygonFromText", wkt, srid);
     }
 
     /**
@@ -1662,7 +1644,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-mpolyfromtext">ST_MultiPolygonFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stMultiPolygonFromText(final Expression wkt, Expression srid, Expression options) {
-        return FunctionUtils.threeArgFunc("ST_MultiPolygonFromText", wkt, srid, options, VarBinaryType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_MultiPolygonFromText", wkt, srid, options);
     }
 
 
@@ -1677,7 +1659,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-pointfromtext">ST_PointFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stPointFromText(final Expression wkt) {
-        return FunctionUtils.oneArgFunc("ST_PointFromText", wkt, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_PointFromText", wkt);
     }
 
     /**
@@ -1691,7 +1673,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-pointfromtext">ST_PointFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stPointFromText(final Expression wkt, Expression srid) {
-        return FunctionUtils.twoArgFunc("ST_PointFromText", wkt, srid, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_PointFromText", wkt, srid);
     }
 
     /**
@@ -1705,7 +1687,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-pointfromtext">ST_PointFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stPointFromText(final Expression wkt, Expression srid, Expression options) {
-        return FunctionUtils.threeArgFunc("ST_PointFromText", wkt, srid, options, VarBinaryType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_PointFromText", wkt, srid, options);
     }
 
 
@@ -1720,7 +1702,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-polyfromtext">ST_PolygonFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stPolygonFromText(final Expression wkt) {
-        return FunctionUtils.oneArgFunc("ST_PolygonFromText", wkt, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_PolygonFromText", wkt);
     }
 
     /**
@@ -1734,7 +1716,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-polyfromtext">ST_PolygonFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stPolygonFromText(final Expression wkt, Expression srid) {
-        return FunctionUtils.twoArgFunc("ST_PolygonFromText", wkt, srid, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_PolygonFromText", wkt, srid);
     }
 
     /**
@@ -1748,7 +1730,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkt-functions.html#function_st-polyfromtext">ST_PolygonFromText(wkt [, srid [, options]])</a>
      */
     public static SimpleExpression stPolygonFromText(final Expression wkt, Expression srid, Expression options) {
-        return FunctionUtils.threeArgFunc("ST_PolygonFromText", wkt, srid, options, VarBinaryType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_PolygonFromText", wkt, srid, options);
     }
 
     /*-------------------below Functions That Create Geometry Values from WKB Values-------------------*/
@@ -1765,7 +1747,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-geomcollfromwkb">ST_GeomCollFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stGeomCollFromWKB(final Expression wkt) {
-        return FunctionUtils.oneArgFunc("ST_GeomCollFromWKB", wkt, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_GeomCollFromWKB", wkt);
     }
 
     /**
@@ -1779,7 +1761,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-geomcollfromwkb">ST_GeomCollFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stGeomCollFromWKB(final Expression wkt, Expression srid) {
-        return FunctionUtils.twoArgFunc("ST_GeomCollFromWKB", wkt, srid, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_GeomCollFromWKB", wkt, srid);
     }
 
     /**
@@ -1793,7 +1775,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-geomcollfromwkb">ST_GeomCollFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stGeomCollFromWKB(final Expression wkt, Expression srid, Expression options) {
-        return FunctionUtils.threeArgFunc("ST_GeomCollFromWKB", wkt, srid, options, VarBinaryType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_GeomCollFromWKB", wkt, srid, options);
     }
 
 
@@ -1808,7 +1790,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-geomfromwkb">ST_GeomFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stGeomFromWKB(final Expression wkt) {
-        return FunctionUtils.oneArgFunc("ST_GeomFromWKB", wkt, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_GeomFromWKB", wkt);
     }
 
     /**
@@ -1822,7 +1804,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-geomfromwkb">ST_GeomFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stGeomFromWKB(final Expression wkt, Expression srid) {
-        return FunctionUtils.twoArgFunc("ST_GeomFromWKB", wkt, srid, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_GeomFromWKB", wkt, srid);
     }
 
     /**
@@ -1836,7 +1818,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-geomfromwkb">ST_GeomFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stGeomFromWKB(final Expression wkt, Expression srid, Expression options) {
-        return FunctionUtils.threeArgFunc("ST_GeomFromWKB", wkt, srid, options, VarBinaryType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_GeomFromWKB", wkt, srid, options);
     }
 
 
@@ -1851,7 +1833,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-linefromwkb">ST_LineStringFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stLineStringFromWKB(final Expression wkt) {
-        return FunctionUtils.oneArgFunc("ST_LineStringFromWKB", wkt, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_LineStringFromWKB", wkt);
     }
 
     /**
@@ -1865,7 +1847,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-linefromwkb">ST_LineStringFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stLineStringFromWKB(final Expression wkt, Expression srid) {
-        return FunctionUtils.twoArgFunc("ST_LineStringFromWKB", wkt, srid, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_LineStringFromWKB", wkt, srid);
     }
 
     /**
@@ -1879,7 +1861,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-linefromwkb">ST_LineStringFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stLineStringFromWKB(final Expression wkt, Expression srid, Expression options) {
-        return FunctionUtils.threeArgFunc("ST_LineStringFromWKB", wkt, srid, options, VarBinaryType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_LineStringFromWKB", wkt, srid, options);
     }
 
     /**
@@ -1893,7 +1875,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-mlinefromwkb">ST_MultiLineStringFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stMultiLineStringFromWKB(final Expression wkt) {
-        return FunctionUtils.oneArgFunc("ST_MultiLineStringFromWKB", wkt, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_MultiLineStringFromWKB", wkt);
     }
 
     /**
@@ -1907,7 +1889,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-mlinefromwkb">ST_MultiLineStringFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stMultiLineStringFromWKB(final Expression wkt, Expression srid) {
-        return FunctionUtils.twoArgFunc("ST_MultiLineStringFromWKB", wkt, srid, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_MultiLineStringFromWKB", wkt, srid);
     }
 
     /**
@@ -1921,7 +1903,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-mlinefromwkb">ST_MultiLineStringFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stMultiLineStringFromWKB(final Expression wkt, Expression srid, Expression options) {
-        return FunctionUtils.threeArgFunc("ST_MultiLineStringFromWKB", wkt, srid, options, VarBinaryType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_MultiLineStringFromWKB", wkt, srid, options);
     }
 
 
@@ -1936,7 +1918,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-mpolyfromwkb">ST_MultiPolygonFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stMultiPolygonFromWKB(final Expression wkt) {
-        return FunctionUtils.oneArgFunc("ST_MultiPolygonFromWKB", wkt, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_MultiPolygonFromWKB", wkt);
     }
 
     /**
@@ -1950,7 +1932,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-mpolyfromwkb">ST_MultiPolygonFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stMultiPolygonFromWKB(final Expression wkt, Expression srid) {
-        return FunctionUtils.twoArgFunc("ST_MultiPolygonFromWKB", wkt, srid, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_MultiPolygonFromWKB", wkt, srid);
     }
 
     /**
@@ -1964,7 +1946,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-mpolyfromwkb">ST_MultiPolygonFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stMultiPolygonFromWKB(final Expression wkt, Expression srid, Expression options) {
-        return FunctionUtils.threeArgFunc("ST_MultiPolygonFromWKB", wkt, srid, options, VarBinaryType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_MultiPolygonFromWKB", wkt, srid, options);
     }
 
 
@@ -1979,7 +1961,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-pointfromwkb">ST_PointFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stPointFromWKB(final Expression wkt) {
-        return FunctionUtils.oneArgFunc("ST_PointFromWKB", wkt, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_PointFromWKB", wkt);
     }
 
     /**
@@ -1993,7 +1975,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-pointfromwkb">ST_PointFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stPointFromWKB(final Expression wkt, Expression srid) {
-        return FunctionUtils.twoArgFunc("ST_PointFromWKB", wkt, srid, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_PointFromWKB", wkt, srid);
     }
 
     /**
@@ -2007,7 +1989,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-pointfromwkb">ST_PointFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stPointFromWKB(final Expression wkt, Expression srid, Expression options) {
-        return FunctionUtils.threeArgFunc("ST_PointFromWKB", wkt, srid, options, VarBinaryType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_PointFromWKB", wkt, srid, options);
     }
 
 
@@ -2022,7 +2004,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-polyfromwkb">ST_PolygonFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stPolygonFromWKB(final Expression wkt) {
-        return FunctionUtils.oneArgFunc("ST_PolygonFromWKB", wkt, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_PolygonFromWKB", wkt);
     }
 
     /**
@@ -2036,7 +2018,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-polyfromwkb">ST_PolygonFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stPolygonFromWKB(final Expression wkt, Expression srid) {
-        return FunctionUtils.twoArgFunc("ST_PolygonFromWKB", wkt, srid, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_PolygonFromWKB", wkt, srid);
     }
 
     /**
@@ -2050,7 +2032,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-wkb-functions.html#function_st-polyfromwkb">ST_PolygonFromWKB(wkb [, srid [, options]])</a>
      */
     public static SimpleExpression stPolygonFromWKB(final Expression wkt, Expression srid, Expression options) {
-        return FunctionUtils.threeArgFunc("ST_PolygonFromWKB", wkt, srid, options, VarBinaryType.INSTANCE);
+        return LiteralFunctions.threeArgFunc("ST_PolygonFromWKB", wkt, srid, options);
     }
 
     /*-------------------below GeometryCollection Property Functions-------------------*/
@@ -2068,7 +2050,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-geometrycollection-property-functions.html#function_st-geometryn">ST_GeometryN(gc, N)</a>
      */
     public static SimpleExpression stGeometryN(final Expression gc, final Expression n) {
-        return FunctionUtils.twoArgFunc("ST_GeometryN", gc, n, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_GeometryN", gc, n);
     }
 
     /**
@@ -2081,7 +2063,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-geometrycollection-property-functions.html#function_st-numgeometries">ST_NumGeometries(gc)</a>
      */
     public static SimpleExpression stNumGeometries(final Expression gc) {
-        return FunctionUtils.oneArgFunc("ST_NumGeometries", gc, IntegerType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_NumGeometries", gc);
     }
 
     /*-------------------below General Geometry Property Functions-------------------*/
@@ -2096,7 +2078,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-general-property-functions.html#function_st-dimension">ST_Dimension(g)</a>
      */
     public static SimpleExpression stDimension(final Expression g) {
-        return FunctionUtils.oneArgFunc("ST_Dimension", g, IntegerType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_Dimension", g);
     }
 
     /**
@@ -2110,7 +2092,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-general-property-functions.html#function_st-envelope">ST_Envelope(g)</a>
      */
     public static SimpleExpression stEnvelope(final Expression g) {
-        return FunctionUtils.oneArgFunc("ST_Envelope", g, VarBinaryType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_Envelope", g);
     }
 
     /**
@@ -2123,7 +2105,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-general-property-functions.html#function_st-geometrytype">ST_GeometryType(g)</a>
      */
     public static SimpleExpression stGeometryType(final Expression g) {
-        return FunctionUtils.oneArgFunc("ST_GeometryType", g, StringType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_GeometryType", g);
     }
 
     /**
@@ -2135,8 +2117,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @throws CriteriaException throw when invoking this method in non-statement context.
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-general-property-functions.html#function_st-isempty">ST_IsEmpty(g)</a>
      */
-    public static IPredicate stIsEmpty(final Expression g) {
-        return FunctionUtils.oneArgPredicateFunc("ST_IsEmpty", g);
+    public static SimplePredicate stIsEmpty(final Expression g) {
+        return LiteralFunctions.oneArgPredicate("ST_IsEmpty", g);
     }
 
 
@@ -2149,8 +2131,8 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @throws CriteriaException throw when invoking this method in non-statement context.
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-general-property-functions.html#function_st-issimple">ST_IsSimple(g)</a>
      */
-    public static IPredicate stIsSimple(final Expression g) {
-        return FunctionUtils.oneArgPredicateFunc("ST_IsSimple", g);
+    public static SimplePredicate stIsSimple(final Expression g) {
+        return LiteralFunctions.oneArgPredicate("ST_IsSimple", g);
     }
 
     /**
@@ -2163,7 +2145,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-general-property-functions.html#function_st-srid">ST_SRID(g [, srid])</a>
      */
     public static SimpleExpression stSRID(final Expression p) {
-        return FunctionUtils.oneArgFunc("ST_SRID", p, IntegerType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_SRID", p);
     }
 
     /**
@@ -2177,7 +2159,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-general-property-functions.html#function_st-srid">ST_SRID(g [, srid])</a>
      */
     public static SimpleExpression stSRID(final Expression p, final Expression srid) {
-        return FunctionUtils.twoArgFunc("ST_SRID", p, srid, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_SRID", p, srid);
     }
 
     /*-------------------below Point Property Functions-------------------*/
@@ -2192,7 +2174,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-point-property-functions.html#function_st-latitude">ST_Latitude(p [, new_latitude_val])</a>
      */
     public static SimpleExpression stLatitude(final Expression p) {
-        return FunctionUtils.oneArgFunc("ST_Latitude", p, DoubleType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_Latitude", p);
     }
 
     /**
@@ -2207,7 +2189,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-point-property-functions.html#function_st-latitude">ST_Latitude(p [, new_latitude_val])</a>
      */
     public static SimpleExpression stLatitude(final Expression p, final Expression newLatitudeVal) {
-        return FunctionUtils.twoArgFunc("ST_Latitude", p, newLatitudeVal, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_Latitude", p, newLatitudeVal);
     }
 
     /**
@@ -2220,7 +2202,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-point-property-functions.html#function_st-longitude">ST_Longitude(p [, new_longitude_val])</a>
      */
     public static SimpleExpression stLongitude(final Expression p) {
-        return FunctionUtils.oneArgFunc("ST_Longitude", p, DoubleType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_Longitude", p);
     }
 
     /**
@@ -2235,7 +2217,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-point-property-functions.html#function_st-longitude">ST_Longitude(p [, new_longitude_val])</a>
      */
     public static SimpleExpression stLongitude(final Expression p, final Expression newLongitudeVal) {
-        return FunctionUtils.twoArgFunc("ST_Longitude", p, newLongitudeVal, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_Longitude", p, newLongitudeVal);
     }
 
     /**
@@ -2248,7 +2230,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-point-property-functions.html#function_st-x">ST_X(p [, new_x_val])</a>
      */
     public static SimpleExpression stX(final Expression p) {
-        return FunctionUtils.oneArgFunc("ST_X", p, DoubleType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_X", p);
     }
 
     /**
@@ -2263,7 +2245,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-point-property-functions.html#function_st-x">ST_X(p [, new_x_val])</a>
      */
     public static SimpleExpression stX(final Expression p, final Expression newXVal) {
-        return FunctionUtils.twoArgFunc("ST_X", p, newXVal, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_X", p, newXVal);
     }
 
     /**
@@ -2276,7 +2258,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-point-property-functions.html#function_st-y">ST_Y(p [, new_y_val])</a>
      */
     public static SimpleExpression stY(final Expression p) {
-        return FunctionUtils.oneArgFunc("ST_Y", p, DoubleType.INSTANCE);
+        return LiteralFunctions.oneArgFunc("ST_Y", p);
     }
 
     /**
@@ -2291,7 +2273,7 @@ abstract class MySQLSpatialFunctions extends MySQLWindowFunctions {
      * @see <a href="https://dev.mysql.com/doc/refman/8.0/en/gis-point-property-functions.html#function_st-y">ST_Y(p [, new_y_val])</a>
      */
     public static SimpleExpression stY(final Expression p, final Expression newYVal) {
-        return FunctionUtils.twoArgFunc("ST_Y", p, newYVal, VarBinaryType.INSTANCE);
+        return LiteralFunctions.twoArgFunc("ST_Y", p, newYVal);
     }
 
 
